feat(backend): Phase 2 — Biaya Operasional + Diagnosa Visual AI + User Profile
New entities & endpoints:
- Biaya: CRUD per lahan, sum-by-period query (V5 migration)
- Diagnosa Visual: Claude Vision API integration with multipart upload,
  base64 image storage, fallback per jenis (BUAH/BATANG/PELEPAH),
  severity-based responses (V6 migration)
- User: profile management + password change

Subscription gating:
- Diagnosa AI quota (GRATIS=3, PETANI=20, PRO=∞ per month)
- Redis-backed counter, only increments on Claude success (not fallback)

Infrastructure:
- Multipart 10MB limit for image uploads
- MaxUploadSizeExceededException → 413 handler
- Updated Claude prompts: AI returns iconKey strings (eco/water/bug/etc)
  instead of emoji to prevent cross-platform rendering issues

Documentation:
- Phase 2 design spec (docs/superpowers/specs/)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>